src/main/webapp/css/newStyle.css
/* ... */
.image-display-date {
  font-weight: normal;
  font-size: 1em !important;
  text-align: center;
  margin-bottom: 0px !important;
  width: 95%;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
}
.imageContent {
  border-radius: 5px;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 20px;
  padding-left: 5%;
  padding-right: 5%;
  padding-top: 2%;
  padding-bottom: calc(2% + 5px);
  cursor: pointer;
  border: 1px solid lightgray;
  margin-left: 5px;
  margin-right: 5px;
  margin-bottom: 11px;
  padding-top: 6%;
  padding-bottom: calc(2% + 22px);
  cursor: pointer;
  transition: box-shadow 0.5s ease 0s;
  transition: background-color 0.5s ease 0s;
  background-color: white !important;
  -webkit-box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0);
  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0);
  break-inside: avoid-column;
  -webkit-column-break-inside: avoid;
  padding: 15px 19px 25px 15px;
  flex: auto;
}
.imageContent:hover {
  cursor: pointer;
  -webkit-box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0.25);
  box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0.25);
}
.imageContent:last-child {
  margin-bottom: 0px;
}
.image-mobile-expanded-div {
  width: 100%;
  left: 0;
  position: absolute;
  box-sizing: content-box;
  overflow: hidden;
  z-index: 2147483646;
  background-color: rgba(0, 0, 0, 0.7);
  overflow: hidden;
}
.visit-page-icon {
  padding-top: 10px;
}
.middle {
  vertical-align: middle;
}
.image-expanded-viewer {
  padding-bottom: 0px !important;
  max-height: 50vh !important;
  margin: auto;
  margin-bottom: 34px;
  width: auto !important;
  min-width: initial !important;
  max-width: calc(100% - 40px);
  padding-top: 17px;
}
ion-button {
  text-transform: none !important;
}
.border-mobile {
  background: transparent;
}
.border-mobile:active {
  background-color: #E8EAEC;
}
.full-height {
  height: 100%;
}
.height-vh {
  height: calc(100vh - 40px) !important;
}
.card-height {
  /* Gradient */
  background: #1a5f97ba; /* Old browsers */
  background: -moz-linear-gradient(top, #1a5f97ba 0%, #000000 100%); /* FF3.6-15 */
  background: -webkit-linear-gradient(top, #1a5f97ba 0%, #000000 100%); /* Chrome10-25,Safari5.1-6 */
  background: linear-gradient(to bottom, #1a5f97ba 0%, #000000 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1a5f97ba', endColorstr='#000000', GradientType=0); /* IE6-9 */
  background: white !important;
  max-height: calc(100vh - 75px);
  min-height: calc(100vh - 75px);
  width: 89vw;
  margin-top: 0px !important;
  z-index: 2;
  overflow-y: auto !important;
  outline: none;
  border-radius: 5px;
  -webkit-box-shadow: 0px 19px 26px -5px rgba(18, 67, 110, 1);
  -moz-box-shadow: 0px 19px 26px -5px rgba(18, 67, 110, 1);
  box-shadow: 0px 19px 26px -5px rgba(18, 67, 110, 1);
}
#showSlides {
  z-index: 99999999999999999;
  height: calc(100vh - 18px);
}
.visit-page {
  --padding-start: 1em;
  margin-left: -1em;
  color: #1c75c0 !important;
  --padding-start: 0.45em;
}
.view-details {
  --padding-end: 0.75em;
  margin-right: -1em;
  color: #1c75c0 !important;
}
.image-mobile-expanded-div ion-list ion-item {
  --min-height: 20px;
  color: rgba(0, 0, 0, 0.7) !important;
  --ion-background-color: transparent !important;
  --ion-padding: 20px !important;
  --ion-padding-: 0 !important
}
.image-mobile-expanded-div ion-card ion-row {
  margin-left: 23px;
  margin-right: 23px;
}
.hydrated h3 {
  margin-top: 30px;
  font-size: 2em;
  color: black !important;
}
.hydrated h3 a {
  color: #007AFF !important;
  font-size: 0.75em !important;
}
body#homeImages .hydrated h4 {
  font-size: 1.6em !important;
  color: black !important;
}
body#home-landing.hydrated h3 {
  margin-top: 30px;
  font-size: 1.6em;
  color: #222 !important;
}
.image-mobile-expanded-div ion-card-content {
  padding-top: 0px;
}
.image-mobile-expanded-div ion-list {
  padding: 15px 0 8px 0;
  background: transparent;
  border-top: 1px solid #435b662e;
  border-bottom: 1px solid #435b662e;
  margin-top: 5px !important;
  margin-bottom: -17px !important;
}
.image-mobile-expanded-div ion-list ion-item:last-of-type {
  padding: 10px 0;
}
.image-mobile-expanded-div ion-list ion-item {
  word-wrap: break-word;
}
.image-mobile-expanded-div ion-list ion-item a {
  color: #1c75c0 !important;
  line-height: normal;
  padding-bottom: 9px !important;
  display: block;
}
.image-mobile-expanded-viewer-mask {
  height: 100vh;
  min-width: 100%;
  background-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}
.closeIt {
  display: block !important;
  position: absolute;
  color: rgb(28, 117, 192) !important;
  background: rgba(255, 255, 255, 0.7);
  border-radius: 25px;
  top: 6px;
  right: calc(5vw + 8px);
  z-index: 2;
  padding: 6px
}
.closeIt a {
  display: block;
  cursor: pointer;
}
.closeItAbsolute {
  display: none;
  position: absolute;
  color: rgb(28, 117, 192) !important;
  background: rgba(255, 255, 255, 0.7);
  border-radius: 25px;
  /*top: 6px;
  right: calc(5vw + 8px);*/
  top: 12px;
  right: calc(5vw + 14px);
  z-index: 2;
}
h1, h2, h3, h4, h5 {
  font-family: roboto, "Open Sans", sans-serif !important;
}
.clean-button {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
  text-align: inherit;
  width: 100%;
}
.clean-button-no-fill {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
  text-align: inherit;
}
.anchor-color {
  color: #337ab7;
}
.alertCopy {
  position: absolute;
  display: hidden;
  top: 0px;
  z-index: 4;
  width: 100%;
  margin: 0px;
  font-family: "Roboto", "Open Sans", sans-serif;
  font-size: 1.3em !important;
  height: 48px;
  font-weight: normal !important;
  text-align: center;
  background-color: #1b65a2 !important;
  color: white !important;
  border: none !important;
  border-radius: none !important
}
/* ... */

